gitops/platform/ingresses/base/backstage-ingress.yaml
# backstage-ingress.yaml
# Ingress para exponer Backstage en http://backstage.local
#
# El service backstage está en el namespace backstage, puerto 7007.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Quitar el header HSTS que Backstage inyecta via Helmet.
    # En entorno local HTTP este header hace que el browser fuerce HTTPS.
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_hide_header Strict-Transport-Security;
spec:
  ingressClassName: nginx
  rules:
    - host: backstage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 7007
